# mokohome

./: .gitignore  TODO  configure.ac  mokohome_git.bb  run-home.sh
data/: Makefile.am
data/themes/gry/: Makefile.am  theme.edc
src/: Makefile.am  desktop.c  desktop.h  globals.h  launchers.c  launchers.h  main.c  widgets.c  widgets.h
